[gd_scene load_steps=8 format=3 uid="uid://cuqwiwbmexb2b"]

[ext_resource type="Script" uid="uid://cskd1pbx25sbl" path="res://scripts/base/main.gd" id="1_s73ds"]
[ext_resource type="PackedScene" uid="uid://cyikw003e0004" path="res://scenes/base/buildings/passive_production.tscn" id="2_m8tcs"]
[ext_resource type="PackedScene" uid="uid://bd48uceokvd1w" path="res://scenes/base/buildings/barn.tscn" id="3_5nnj5"]
[ext_resource type="PackedScene" uid="uid://bsup87cdmtjvq" path="res://scenes/base/buildings/mill.tscn" id="4_spyfa"]
[ext_resource type="Script" uid="uid://bnklsggrwv3r5" path="res://scripts/autoloads/resource_manager.gd" id="5_bvkwx"]
[ext_resource type="Script" uid="uid://cwih4o76gqssw" path="res://scripts/base/grid.gd" id="6_podhj"]
[ext_resource type="Script" uid="uid://b2gpdxyluowho" path="res://scripts/base/UIManager.gd" id="7_y3jew"]

[node name="Main" type="Node2D"]
script = ExtResource("1_s73ds")
house_scene = ExtResource("2_m8tcs")
barn_scene = ExtResource("3_5nnj5")
mill_scene = ExtResource("4_spyfa")

[node name="ResourceManager" type="Node" parent="."]
script = ExtResource("5_bvkwx")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("6_podhj")

[node name="Buildings" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HouseButton" type="Button" parent="CanvasLayer"]
offset_left = 806.0
offset_top = 28.0
offset_right = 1005.0
offset_bottom = 59.0
scale = Vector2(3.19059, 3.56282)
text = "Лесопилка автономная"

[node name="Label" type="Label" parent="CanvasLayer/HouseButton"]
layout_mode = 0
offset_left = 2.0
offset_top = 31.0
offset_right = 93.0
offset_bottom = 80.0
scale = Vector2(0.475934, 0.5896)
text = "10 дерево
5     камень"

[node name="BarnButton" type="Button" parent="CanvasLayer"]
offset_left = 270.0
offset_top = 55.0
offset_right = 315.0
offset_bottom = 86.0
scale = Vector2(3.19059, 3.56282)
text = "Barn"

[node name="Label" type="Label" parent="CanvasLayer/BarnButton"]
layout_mode = 0
offset_left = 2.0
offset_top = 31.0
offset_right = 93.0
offset_bottom = 80.0
scale = Vector2(0.515705, 0.5896)
text = "50 дерево
10 камень"

[node name="MillButton" type="Button" parent="CanvasLayer"]
offset_left = 502.0
offset_top = 52.0
offset_right = 542.0
offset_bottom = 83.0
scale = Vector2(3.19059, 3.56282)
text = "Mill"

[node name="Label" type="Label" parent="CanvasLayer/MillButton"]
layout_mode = 0
offset_left = 2.0
offset_top = 31.0
offset_right = 93.0
offset_bottom = 80.0
scale = Vector2(0.666285, 0.5896)
text = "100 дерево
5     камень"

[node name="PlaceDialog" type="ConfirmationDialog" parent="CanvasLayer"]

[node name="HBoxContainer" type="CanvasLayer" parent="."]
script = ExtResource("7_y3jew")

[node name="food_label" type="Label" parent="HBoxContainer"]
offset_left = 1687.0
offset_top = 187.0
offset_right = 1898.0
offset_bottom = 272.0
text = "еда"

[node name="wood_label" type="Label" parent="HBoxContainer"]
offset_left = 1702.0
offset_top = 15.0
offset_right = 1913.0
offset_bottom = 100.0
text = "дерево"

[node name="stone_label" type="Label" parent="HBoxContainer"]
offset_left = 1695.0
offset_top = 112.0
offset_right = 1906.0
offset_bottom = 197.0
text = "камень"
